# scannerapps

./: .gitignore  move_files_to_cloud_local.sh  readme.md  set_paths.sh
soccer/: Dockerfile.master  Dockerfile.worker  config.toml  deploy.sh  master.yml.template  requirements.txt  spawn_cluster.sh  worker.py  worker.yml.template
soccer/calibration/: calibrate.py  decomposed.py  edge_detection.py  utils.py  vanilla.py
soccer/calibration/depracated/: calibrate.py  homographies.py  pytorch_calibration.py
soccer/calibration/distancetr_op/: CMakeLists.txt  Makefile  distance.proto  distancetr_op.cpp
soccer/depracated/helper/: pose_buffer.py
soccer/depracated/kernels_c/: run.py
soccer/depracated/protobuff_try/: CMakeLists.txt  main.cpp  main.py
soccer/depth/: estimate_depth.py  hourglass.py  tmp.py  tmp_batch_process.py  transforms.py
soccer/helper/: crop_players.py  kernels.py  pose_buffer.py  tmp.py
soccer/helpers/: combine_masks.py  frame_to_players.py
soccer/helpers/depracated/: run.py  segment_cpp.py
soccer/helpers/segment_op/: Makefile
soccer/instance_segmentation/: edge_detect.py  instance_segm_from_db.py  instance_segmentation.py  load_img_pose_edges_to_db.py  run.py  segment_cpp.py
soccer/instance_segmentation/instancesegm_op/: CMakeLists.txt  instancesegm.proto  instancesegm_op.cpp
soccer/kernels_c/: run.py
soccer/main/: frame_to_players.py  kernels.py  run.py  segment_cpp.py
soccer/openposes/: get_poses.py
soccer/protobuff_try/: image.proto  main.py
trials/: count_files.py  make_dir_structure.py
(+18 files in other folders)
